gcc-14.2.0/gcc/testsuite/gdc.test/fail_compilation/test20719.d
version https://git-lfs.github.com/spec/v1
oid sha256:0dff1ae8d1d61e2bc099b3f608a22c8682b9231bb0f70f4effc102200ab0b216
size 829
